--- a/media/style.css
+++ b/media/style.css
@@ -1,29 +1,73 @@
+@font-face {
+  font-family: "Omori-Font";
+  src: url('./fonts/OMORI_GAME2.ttf') format('embed-opentype'), url('./fonts/OMORI_GAME2.ttf') format('woff2'), url('./fonts/OMORI_GAME2.ttf') format('woff'), url('./fonts/OMORI_GAME2.ttf') format('truetype'), url('./fonts/OMORI_GAME2.ttf') format('svg');
+}
+
 * {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: "Omori-Font", serif;
 }
 
 body {
-    background-color: cyan;
-    display: flex;
-    margin: 0;
-    font-size: 1.5rem;
-    flex-direction: row;
+  font-family: "Omori-Font";
+  background-color: cyan;
+  display: flex;
+  margin: 0;
+  font-size: 1.5rem;
+  flex-direction: column;
+}
+
+html,
+body {
+  color: #ffffff;
+  height: 100%;
 }
 
 main {
-    background-color: black;
-    min-width: 100%;
-    min-height: 100%;
-    
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
+.carpet{
+  margin-top: 100px;
+  border: 4px solid black;
+  width: 70%;
+  height: 45%;
+  display: flex;
+  position: relative;
+}
+.mewo{
+  position: absolute;
+  bottom: 0;
+}
+.light-bulb{
+  position: absolute;
+}
+header fieldset{
+  margin: 0;
+  padding: 0;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  border: 2px solid rgb(255, 255, 255, 0.50);
+}
 header {
-    margin-left: 10px;
-    margin-right: 10px;
-    position: sticky;
-    min-height: 2rem;
-    background-color: white;
-    max-width: 100%;
-    display: flex;
-    justify-content: space-between;
+  align-items: center;
+  user-select: none;
+  box-sizing: border-box;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 0 0 10px 10px;
+  border: 2px solid rgb(255, 255, 255, 0.05);
+  position: fixed;
+  min-height: 2rem;
+  background-color: rgb(255, 255, 255, 0.15);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
