--- a/media/style.css
+++ b/media/style.css
@@ -33,12 +33,16 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  transition: all 0.1s ease;
   align-items: center;
+  overflow: hidden;
 }
 .carpet{
+  transition: all 0.3s ease;
   margin-top: 100px;
   border: 4px solid var(--dark);
   width: 90%;
+  box-shadow: 0px 0px 5px 1px var(--dark);
   max-width: 600px;
   aspect-ratio: 4 / 3;
   min-width: 200px;
@@ -47,35 +51,63 @@ main {
   flex-direction: row;
   position: relative;
 }
-.mewo{
+
+#door{
+  filter: invert();
+  height: 20vmin;
+  min-height: 50px;
+  width: auto;
+  cursor: pointer;
+  margin-bottom: 80%;
+  transition: all 0.1s ease;
+}
+#mewo{
+  transition: all 0.1s ease;
+  height: 10vmin;
+  min-height: 40px;
+  width: auto;
   position: absolute;
   bottom: 0;
 }
-.light-bulb{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
 #debug{
   color: var(--dark);
   font-size: 200px;
 }
-#bulb{
+#bulb {
   filter: invert();
+  height: 22vmin;
+  min-height: 100px;
+  width: auto;
   position: absolute;
   cursor: pointer;
-  margin: 0;
-  padding: 0;
   top: 0;
-  right: 0;
+  right: 100px;
+  transition: all 0.3s ease;
+}
+#bulb-text {
+  position: absolute;
+  top: calc(22vmin + 10px);
+  
+  right: 110px;
+  font-size: 6vmin;
+  color: var(--dark);
+  transition: all 0.3s ease;
 }
 
-#shadow{
-  filter: drop-shadow(0 0 10px black);
-  position: absolute;
-  top: 50%;
-  left: 65%;
+@media only screen and (max-width: 600px) {
+  #bulb-text {
+    top: 100px;
+    right: 0;
+  }
 }
+@media only screen and (max-width: 600px) {
+  #bulb {
+    height: 15vmin;
+    right: 0;
+  }
+}
+
 header fieldset{
   margin: 0;
   padding: 0;
