--- a/media/style.css
+++ b/media/style.css
@@ -3,43 +3,101 @@
   src: url('./fonts/OMORI_GAME2.ttf');
 }
 
-* {
-  font-family: "Omori-Font";
-}
-body {
+:root {
   --white: #ffffff;
   --dark: #000000;
-  font-family: "Omori-Font";
-  display: flex;
-  margin: 0;
-  font-size: 1.5rem;
-  flex-direction: column;
 }
-.dark{
+
+body {
+  font-family: "Omori-Font", sans-serif;
+  font-size: 1.5rem;
+  margin: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  user-select: none;
+  color: var(--dark);
+  background-color: var(--white);
+}
+
+body[data-theme='dark'] {
   --white: #000000;
   --dark: #ffffff;
 }
-html,
-body {
-  user-select: none;
-  color: black;
-  height: 100%;
+
+/* HEADER */
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 0.5rem 1rem;
+  background-color: rgba(255, 255, 255, 0.15);
+  border: 2px solid rgba(255, 255, 255, 0.05);
+  border-radius: 0 0 10px 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-main {
-  background-color: var(--white);
-  width: 100%;
-  height: 100%;
+.menu-button {
+  background: none;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  padding: 0.25rem 0.5rem;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+/* LIGHT BULB SECTION */
+.light-bulb {
+  position: absolute;
+  top: 0px;
+  right: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  transition: all 0.1s ease;
   align-items: center;
-  overflow: hidden;
+  z-index: 10;
 }
-.carpet{
+
+#theme-toggle {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+#bulb {
+  filter: invert();
+  height: 22vmin;
+  min-height: 100px;
+  width: auto;
   transition: all 0.3s ease;
-  margin-top: 100px;
+}
+
+#bulb-text {
+  margin-top: 10px;
+  font-size: 6vmin;
+  color: var(--dark);
+  transition: all 0.3s ease;
+}
+
+/* MAIN LAYOUT */
+main.whitespace {
+  width: 100%;
+  height: 100vh;
+  padding-bottom: 50px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end; 
+  position: relative;
+  overflow: hidden;
+  background-color: var(--white);
+  transition: background-color 0.1s ease;
+}
+
+/* CARPET */
+.carpet {
+  margin-bottom: 20px;
   border: 4px solid var(--dark);
   width: 90%;
   box-shadow: 0px 0px 5px 1px var(--dark);
@@ -48,89 +106,39 @@ main {
   min-width: 200px;
   min-height: 100px;
   display: flex;
-  flex-direction: row;
   position: relative;
+  transition: all 0.3s ease;
 }
 
-#door{
+/* DOOR */
+.door img {
   filter: invert();
   height: 20vmin;
   min-height: 50px;
-  width: auto;
   cursor: pointer;
   margin-bottom: 80%;
   transition: all 0.1s ease;
 }
-#mewo{
-  transition: all 0.1s ease;
-  height: 10vmin;
-  min-height: 40px;
-  width: auto;
+
+/* MEWO */
+
+
+.mewo img {
   position: absolute;
   bottom: 0;
+  height: 10vmin;
+  min-height: 40px;
+  transition: all 0.1s ease;
 }
 
-#debug{
-  color: var(--dark);
-  font-size: 200px;
-}
-#bulb {
-  filter: invert();
-  height: 22vmin;
-  min-height: 100px;
-  width: auto;
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  right: 100px;
-  transition: all 0.3s ease;
-}
-#bulb-text {
-  position: absolute;
-  top: calc(22vmin + 10px);
-  
-  right: 110px;
-  font-size: 6vmin;
-  color: var(--dark);
-  transition: all 0.3s ease;
-}
+/* MEDIA QUERIES */
+@media (max-width: 600px) {
+  #bulb {
+    height: 15vmin;
+  }
 
-@media only screen and (max-width: 600px) {
   #bulb-text {
     top: 100px;
     right: 0;
   }
-}
-@media only screen and (max-width: 600px) {
-  #bulb {
-    height: 15vmin;
-    right: 0;
-  }
-}
-
-header fieldset{
-  margin: 0;
-  padding: 0;
-  padding-left: 5px;
-  padding-right: 5px;
-  border-radius: 10px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  cursor: pointer;
-  border: 2px solid rgb(255, 255, 255, 0.50);
-}
-header {
-  align-items: center;
-  user-select: none;
-  box-sizing: border-box;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 0 0 10px 10px;
-  border: 2px solid rgb(255, 255, 255, 0.05);
-  position: fixed;
-  min-height: 2rem;
-  background-color: rgb(255, 255, 255, 0.15);
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
 }
