--- a/media/style.css
+++ b/media/style.css
@@ -3,6 +3,14 @@
   src: url('./fonts/OMORI_GAME2.ttf');
 }
 
+html {
+  box-sizing: border-box;
+  height: 100%;
+}
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
 :root {
   --white: #ffffff;
   --dark: #000000;
@@ -12,7 +20,8 @@ body {
   font-family: "Omori-Font", sans-serif;
   font-size: 1.5rem;
   margin: 0;
-  height: 100%;
+  min-height: 100dvh;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   user-select: none;
@@ -82,22 +91,24 @@ body[data-theme='dark'] {
 
 /* MAIN LAYOUT */
 main.whitespace {
+  box-sizing: border-box;
   width: 100%;
-  height: 100vh;
-  padding-bottom: 50px; 
+  flex-grow: 1; 
+  padding-bottom: 3vh; 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end; 
+  justify-content: flex-end;
   position: relative;
-  overflow: hidden;
   background-color: var(--white);
   transition: background-color 0.1s ease;
+  gap: 3vh;
 }
 
 /* CARPET */
 .carpet {
-  margin-bottom: 20px;
+  box-sizing: border-box;
+  margin-bottom: 0;
   border: 4px solid var(--dark);
   width: 90%;
   box-shadow: 0px 0px 5px 1px var(--dark);
@@ -112,12 +123,11 @@ main.whitespace {
 
 /* DOOR */
 .door img {
-  filter: invert();
-  margin-top: 10px;
+  filter: invert(); 
   height: 20vmin;
-  min-height: 50px;
+  min-height: 150px;
   cursor: pointer;
-  margin-bottom: 80%;
+  margin-bottom: 0;
   transition: all 0.1s ease;
 }
 
@@ -127,19 +137,39 @@ main.whitespace {
 .mewo img {
   position: absolute;
   bottom: 0;
-  height: 10vmin;
+  height: 11vmin;
   min-height: 40px;
   transition: all 0.1s ease;
 }
 
 /* MEDIA QUERIES */
 @media (max-width: 600px) {
+  .light-bulb {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    right: auto;
+    transform: translateX(-50%);
+    align-items: center;
+  }
+
   #bulb {
-    height: 15vmin;
+    height: 30vmin;
+    position: static;
+    transform: none;
+    display: block;
+    margin: 0 auto;
   }
 
   #bulb-text {
-    top: 100px;
-    right: 0;
+    font-size: 9vmin;
+    position: static;
+    margin-top: 10px;
+    text-align: center;
+    width: 100%;
+  }
+
+  .mewo img {
+    height: 15vmin;
   }
 }
