--- a/pages/styles/style.css
+++ b/pages/styles/style.css
@@ -38,7 +38,6 @@ body[data-theme='dark'] {
 .header {
   position: fixed;
   top: 0;
-  width: 100%;
   padding: 0.5rem 1rem;
   background-color: rgba(255, 255, 255, 0.15);
   border: 2px solid rgba(255, 255, 255, 0.05);
@@ -77,7 +76,7 @@ body[data-theme='dark'] {
 #bulb {
   filter: invert();
   height: 22vmin;
-  min-height: 100px;
+  padding-left: 15px;
   width: auto;
   transition: all 0.3s ease;
 }
@@ -114,8 +113,8 @@ main.whitespace {
   box-shadow: 0px 0px 5px 1px var(--dark);
   max-width: 600px;
   aspect-ratio: 4 / 3;
-  min-width: 200px;
-  min-height: 100px;
+  min-width: 200;
+  padding-left: 15px;
   display: flex;
   position: relative;
   transition: all 0.3s ease;
@@ -156,16 +155,17 @@ main.whitespace {
   margin-right: 10vmin;
 }
 /* LAPTOP */
-.laptop img {
+#laptop img {
   position: absolute;
   cursor: pointer;
+  padding-left: 15px;
   height: 13vmin;
   min-height: 50px;
   transition: all 0.1s ease;
 }
 
 /* SKETCHBOOK */
-.scketchbook img {
+#scketchbook img {
   position: absolute;
   height: 13vmin;
   cursor: pointer;
@@ -174,7 +174,7 @@ main.whitespace {
 }
 
 /* TISSUE BOX */
-.tissue-box img {
+#tissue-box img {
   position: absolute;
   height: 11vmin;
   min-height: 40px;
