--- a/pages/styles/headspace.css
+++ b/pages/styles/headspace.css
@@ -19,7 +19,7 @@
     --primary-text: #000000; 
     --link-hover: rgba(0, 0, 0, 0.7);
     --header-bg-img: url('/media/image/background/dark_whitespace_backdrop.jpg');
-    --body-bg-img: url('/media/image/background/headspace_purple_backdrop.png');
+    --body-bg-img: url('/media/image/background/picnic_cloth.jpg');
     --header-text-shadow: 2px 2px 20px #ffffff;
 }
 
@@ -122,18 +122,13 @@ header {
 }
 
 nav {
-    background-color: var(--white-30);
-    backdrop-filter: blur(10px);
-    color: var(--primary-text);
-    border: 1px solid rgba(0, 0, 0, 0.12);
-    border-radius: 10px;
-    min-width: 90vw;
-    padding: 1%;
+    position: relative; 
     display: flex;
-    justify-content: center;
-    /* REMOVIDO: "animation: fadeIn 0.5s forwards;" */
-    /* REMOVIDO: "opacity: 0;" */
+    justify-content: flex-start;
+    width: 100%;
+    padding: 1rem;
     margin-bottom: 2rem;
+    background-color: transparent;
 }
 
 nav ul {
@@ -163,11 +158,11 @@ nav ul li a:hover {
 }
 
 /* Estilos do Main */
-#main-content > section {
-    /* REMOVIDO: "opacity: 0;" */
-    /* REMOVIDO: "animation: fadeIn 0.5s forwards;" */
+main {
+    opacity: 0;
+    animation: fadeIn 0.5s forwards;
     background-color: var(--white-30);
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(20px);
     padding: 2rem;
     border: 1px solid rgba(0, 0, 0, 0.12);
     border-radius: 10px;
@@ -175,54 +170,8 @@ nav ul li a:hover {
     max-width: 80vw;
     box-shadow: rgba(204, 209, 255, 0.25);
     transition: 300ms;
-    margin-bottom: 100px;
-}
-#main-content > section > figure {
-    display: flex;
-    flex-direction: column;
-}
-#main-content > section:hover {
-    backdrop-filter: blur(15px);
-    scale: 1.01;
 }
 
-.pages {
-    display: flex;
-    flex-direction: row;
-    gap: 50px;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 3rem 0;
-}
-
-.pages figure {
-    margin: 0;
-}
-
-.pages img {
-    border-radius: 12px;
-    transition: transform 0.3s ease;
-    padding: 20px;
-    background-color: var(--white-30);
-  
-}
-
-.pages img:hover {
-    transform: scale(1.03);
-    box-shadow: 0px 0px 10px var(--dark-50);
-}
-
-.fade-in-element {
-    opacity: 0;
-    transform: translateY(30px);
-    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-}
-
-/* Classe que será adicionada via JS para ativar a animação */
-.fade-in-element.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
 
 @keyframes fadeIn {
     from {
@@ -235,12 +184,11 @@ nav ul li a:hover {
     }
 }
 
-
 @media (max-width: 900px) {
-  .pages {
-    flex-direction: column;
-    gap: 20px;
-  }
+    .pages {
+        flex-direction: column;
+        gap: 20px;
+    }
 }
 
 @media (max-width: 600px) {
