blackspace: added entrance to blackspace; faraway town: added ft page

--- a/pages/styles/blackspace.css
+++ b/pages/styles/blackspace.css
@@ -19,7 +19,7 @@
     --primary-text: #000000; 
     --link-hover: rgba(0, 0, 0, 0.7);
     --header-bg-img: url('/media/image/background/dark_whitespace_backdrop.jpg');
-    --body-bg-img: url('/media/image/background/picnic_cloth.jpg');
+    --body-bg-img: url('/media/image/background/blackspace_background.png');
     --header-text-shadow: 2px 2px 20px #ffffff;
 }
 
