--- a/pages/styles/homePage.css
+++ b/pages/styles/homePage.css
@@ -360,6 +360,52 @@ nav ul li a:hover {
     transform: translateY(0);
 }
 
+/* Transição BlackSpace */
+#main-content::after {
+    position: absolute;
+    left: 0%;
+    width: 100%;
+    height: 300%;
+    content: "";
+    background: linear-gradient(to top, black, transparent);
+    pointer-events: none;
+}
+
+#blackspace-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 350vh;
+    position: relative;
+}
+
+#blackspace-content #content{
+    text-align: center;
+    position: absolute;
+    bottom: 80%;
+}
+
+#blackspace-content figure {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    bottom: 0%;
+    background-color: black;
+    align-items: center;
+}
+
+#blackspace-content img {
+    cursor: pointer;
+    transition: 300ms;
+}
+
+#blackspace-content img:hover {
+    scale: 1.02;
+    transform: translateY(-10px);
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
