--- a/pages/styles/style.css
+++ b/pages/styles/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  font-family: "Omori-Font", sans-serif;
+  font-family: "Omori-Font";
   font-size: 1.5rem;
   margin: 0;
   min-height: 100dvh;
