--- a/pages/styles/headspace.css
+++ b/pages/styles/headspace.css
@@ -377,13 +377,15 @@ nav ul li a:hover {
 }
 
 #prevBtn {
-  left: 10px;
+  left: -10px;
 }
 
 #nextBtn {
-  right: 10px;
+  right: -10px;
 }
-
+.nav-arrow{
+  transition: all 0.5s ease;
+}
 .nav-arrow:hover {
   transform: translateY(-50%) scale(1.1);
 }
