--- a/pages/styles/faraway.css
+++ b/pages/styles/faraway.css
@@ -80,30 +80,39 @@ header {
   margin-bottom: 2rem;
 }
 
-#goBack {
+.footer-items {
   position: fixed;
   left: 20px;
+  width: 98%;
   bottom: 20px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
-  margin: 0;
-  padding: 0.5rem 1rem;
-  color: var(--primary-text);
-  backdrop-filter: blur(12px);
-  background-color: var(--white-30);
-  border: 1px solid rgba(0, 0, 0, 0.6);
-  border-radius: 10px;
   z-index: 9999;
   transition: 250ms;
 }
 
-#goBack:hover {
-    scale: 1.02;
+.footer-items a{
+  border-radius: 10px;
+  color: var(--primary-text);
+  margin: 0;
+  padding: 0.5rem 1rem;
+  backdrop-filter: blur(12px);
+  background-color: var(--white-30);
+  border: 1px solid rgba(0, 0, 0, 0.6);
 }
 
-#btInfo  {
-    
+#bt-info {
+    left: 20px;
+    bottom: 20px;
+    padding: 10px;
+    color: var(--primary-text);
+    backdrop-filter: blur(12px);
+    background-color: var(--white-30);
+    border: 1px solid rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    z-index: 9999;
 }
 
 #background-layer {
